# StarostinVPN

./: .gitignore  CMakeLists.txt  Qt  README.md  app.manifest  app.rc  build.bat  latest.json
cloudflare/: README-TG-Worker.md  tg-worker.js
engine/: general (ALT3).bat  general.bat
engine/lists/: ipset-all.txt  list-exclude-user.txt  list-exclude.txt
engine/tgproxy/: Dockerfile  README.md
engine/tgproxy/proxy/: __init__.py  bridge.py  config.py  raw_websocket.py  tg_ws_proxy.py  utils.py
engine/tgproxy/utils/: default_config.py  tray_common.py  update_check.py
installer/: StarostinVPN.iss
qml/: GlassPanel.qml  GlowButton.qml  Main.qml  StarField.qml
src/: AdminCheck.h  CfController.cpp  CfController.h  CursorHelper.h  DiagController.cpp  DiagController.h  GatewayController.cpp  GatewayController.h  LogController.cpp  LogController.h  NetworkScanner.cpp  NetworkScanner.h  StatsTracker.cpp  StatsTracker.h  Store.cpp  Store.h  TgController.cpp  TgController.h  TrayMenuHelper.h  UpdateChecker.cpp  UpdateChecker.h  VlessController.cpp  VlessController.h  ZapretController.cpp  ZapretController.h  main.cpp
